 
	
   [*] Changes that are 100% compatible with existing client code.  
  [**] Changes that requiring little or no modification to existing
       client code. 
 [***] Changes requiring important modifications to existing client code.
   
   [D] Changes affect a method or property which was previously marked as 
       deprecated.
   
 - The location information extraction code has been refactored to use
   a faster mechanism when running on JDK 1.4 or later. The new mechanism, contributed 
   by Martin Schulz, is at least twice as fast. 
 
   See http://marc.theaimsgroup.com/?t=108473346700001&r=1&w=2 for more details. [*]
   
 - Made ignoresThrowable a settable property. The user can now force a layout
   to ignore the throwable in the event even if the layout knows how to handle
   exceptions. Conversely, an appender can be fooled to believe that a layout
   handled the exception in the logging event by setting a layout's ignoresThrowable
   property to false. [*]
   
 - The org.apache.log4j.db package replaces the old org.apache.log4j.jdbc
   package. The new package supports most relational database systems
   such as PostgreSQL, MySQL, Oracle, DB2 or MsSQL. It can also handle
   retrieve connections using a JDBC driver class, a data source class or
   JNDI. [*]
     
 - A sequenceNumber field has been added to LoggingEvent. This fields is useful when 
   checking for the equality of two logging events or when ordering them. [*]

 - Log4j now has its own Scheduler. It allows jobs to be executed at a certain date
   or even periodically. It only requires just one extra thread. [*]
   
 - Added the "isPristine" flag to LoggerRepository. As soon as a configurator
   starts configuring a repository this flag is set to false.
   
 - Removed support for the deprecated property "log4j.configDebug". [**/D]

 - Added keys() method to the MDC class as requested by Don Isenor.
 
 - Certain operations on Loggers are now made using ReaderWriterLocks which 